# CortexNews

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily_pipeline.yml
app/core/: config.py  constants.py  logger.py
app/db/: models.py  repository.py
app/pipeline/: cluster.py  filter.py  format.py  ingest.py  orchestrator.py  summarize.py
app/scheduler/: cron_jobs.py
app/services/: ai_service.py  news_service.py  whatsapp_service.py
scripts/: run_pipeline.py
tests/: test_pipeline.py  test_services.py
